add missing property

--- a/security-sso-component/src/main/resources/application-security.properties
+++ b/security-sso-component/src/main/resources/application-security.properties
@@ -2,7 +2,7 @@ zuul.routes.user.path=/user/**
 zuul.routes.user.url=${security.server.url}/user
 
 # Security
-security.server.url=${security.server.protocol:${server.protocol}}://${security.server.hostname:${server.hostname}}:${security.service.port:9999}
+security.server.url=${security.server.protocol:${server.protocol:http}}://${security.server.hostname:${server.hostname}}:${security.service.port:9999}
 security.enabled=true
 security.user.password=password
 security.oauth2.client.accessTokenUri=${security.server.url}/oauth/token
