fix https mapping issue

--- a/eureka-client-component/src/main/resources/application-eureka.properties
+++ b/eureka-client-component/src/main/resources/application-eureka.properties
@@ -1,5 +1,3 @@
-eureka.client.serviceUrl.defaultZone=${eureka.server.protocol:${server.protocol}}://${eureka.server.user:eureka}:${eureka.server.password:eurekasecret}@${eureka.server.hostname:${server.hostname}}:${eureka.server.port:8761}/eureka/
-
 # all interval properties below may require to be adjusted for performance
 eureka.client.registry-fetch-interval-seconds=10
 eureka.client.eureka-service-url-poll-interval-seconds=5
@@ -7,20 +5,22 @@ eureka.client.initial-instance-info-replication-interval-seconds=15
 eureka.client.instance-info-replication-interval-seconds=10
 eureka.instance.leaseRenewalIntervalInSeconds=10
 
-#eureka.instance.preferIpAddress=false
 eureka.instance.protocol=${server.protocol:http}
 eureka.instance.hostname=${server.hostname}
-eureka.instance.securePort=${server.port:8761}
+eureka.instance.port=${server.port:8761}
 
 eureka.instance.url=${eureka.instance.protocol}://${eureka.instance.hostname}:${eureka.instance.port}
 
 eureka.instance.securePortEnabled=${ssl.enabled:false}
+eureka.instance.securePort=${eureka.instance.port:8761}
 eureka.instance.secureVirtualHostName=${spring.application.name}
 eureka.instance.statusPageUrl=${eureka.instance.url}/info
 eureka.instance.healthCheckUrl=${eureka.instance.url}/health
 eureka.instance.homePageUrl=${eureka.instance.url}/
 
-ribbon.IsSecure=true
+eureka.client.serviceUrl.defaultZone=${eureka.server.protocol:${eureka.instance.protocol}}://${eureka.server.user:eureka}:${eureka.server.password:eurekasecret}@${eureka.server.hostname:${eureka.instance.hostname}}:${eureka.server.port:8761}/eureka/
+
+ribbon.IsSecure=${eureka.instance.securePortEnabled}
 #ribbon.ConnectTimeout=999999999
 ribbon.ReadTimeout=86400000
 #zuul.host.connect-timeout-millis=999999999
