--- a/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.hostname=${COMPUTERNAME}
 server.port=8761
 spring.application.name=eureka-service
 
+security.basic.enabled=false
 eureka.user=eureka
 eureka.password=eurekasecret
 
