--- a/eureka-client-component/src/main/resources/application-eureka.properties
+++ b/eureka-client-component/src/main/resources/application-eureka.properties
@@ -5,6 +5,8 @@ eureka.client.initial-instance-info-replication-interval-seconds=15
 eureka.client.instance-info-replication-interval-seconds=10
 eureka.instance.leaseRenewalIntervalInSeconds=10
 
+eureka.client.healthcheck.enabled=true
+
 eureka.instance.protocol=${server.protocol:http}
 eureka.instance.hostname=${server.hostname}
 eureka.instance.port=${server.port:8761}
