--- a/eureka-client-component/src/main/resources/application-eureka.properties
+++ b/eureka-client-component/src/main/resources/application-eureka.properties
@@ -24,6 +24,6 @@ eureka.client.serviceUrl.defaultZone=${eureka.server.protocol:${eureka.instance.
 
 ribbon.IsSecure=${eureka.instance.securePortEnabled}
 #ribbon.ConnectTimeout=999999999
-ribbon.ReadTimeout=86400000
+ribbon.ReadTimeout=${request.timeout:86400000}
 #zuul.host.connect-timeout-millis=999999999
 #zuul.host.socket-timeout-millis=999999999
