refactor include profiles

--- a/client-service/src/main/resources/application.properties
+++ b/client-service/src/main/resources/application.properties
@@ -7,4 +7,4 @@ security.basic.enabled=false
 swagger.proxy=true
 #eureka.instance.instanceId: ${random.uuid}
 
-spring.profiles.include=security, eureka, ssl, sslTrustStore, swagger
+spring.profiles.include=eureka, security, ssl, sslTrustStore, swagger
