--- a/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/src/main/resources/application.properties
@@ -10,5 +10,5 @@ eureka.client.fetchRegistry=false
 eureka.server.enable-self-preservation=false
 eureka.server.responseCacheAutoExpirationInSeconds=10
 
-spring.profiles.include=sslTrustStore, security, eureka, ssl
+spring.profiles.include=eureka, security, ssl, sslTrustStore
 
