--- a/passport-service/src/main/resources/application.properties
+++ b/passport-service/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.application.name=passport-service
 security.basic.enabled=false
 #eureka.instance.instanceId=${random.uuid}
 
-spring.profiles.include=security, eureka, ssl, sslTrustStore, swagger
+spring.profiles.include=eureka, security, ssl, sslTrustStore, swagger
