--- a/contact-service/src/main/resources/application.properties
+++ b/contact-service/src/main/resources/application.properties
@@ -7,5 +7,5 @@ security.basic.enabled=false
 spring.jpa.generate-ddl=true
 #eureka.instance.instanceId=${random.uuid}
 
-spring.profiles.include=security, eureka, ssl, sslTrustStore, swagger
+spring.profiles.include=eureka, security, ssl, sslTrustStore, swagger
 
