--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,6 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
-* text=auto eol=lf
-
-# Explicitly declare text files you want to always be normalized and converted
-# to native line endings on checkout.
-*.java text
-*.properties text
-
-# Declare files that will always have CRLF line endings on checkout.
-*.sln text eol=crlf
+*.java text=auto eol=crlf
+*.properties text=auto eol=lf
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
