--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 # *.java text=auto # pull depending on OS and push them as lf
 *.java text=auto eol=lf
 *.properties text=auto eol=lf
+*.xml text=auto eol=lf
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
