add snapshot and release repository

--- a/starter-parent/pom.xml
+++ b/starter-parent/pom.xml
@@ -40,10 +40,15 @@
     </build>
 
     <distributionManagement>
+        <snapshotRepository>
+            <id>project.local</id>
+            <name>project</name>
+            <url>file:${project.basedir}/../snasphot/.repo</url>
+        </snapshotRepository>
         <repository>
             <id>project.local</id>
             <name>project</name>
-            <url>file:${project.basedir}/../.repo</url>
+            <url>file:${project.basedir}/../release/.repo</url>
         </repository>
     </distributionManagement>
 </project>
