--- a/dependency-parent/pom.xml
+++ b/dependency-parent/pom.xml
@@ -130,11 +130,15 @@
     </repositories>
 
     <distributionManagement>
-        <!--other repositories if any-->
+        <snapshotRepository>
+            <id>project.local</id>
+            <name>project</name>
+            <url>file:${project.basedir}/../snasphot/.repo</url>
+        </snapshotRepository>
         <repository>
             <id>project.local</id>
             <name>project</name>
-            <url>file:${project.basedir}/../.repo</url>
+            <url>file:${project.basedir}/../release/.repo</url>
         </repository>
     </distributionManagement>
 </project>
