refactoring package, class and method names and registry config name

--- a/eureka-client-component/src/main/resources/application-eureka.properties
+++ b/eureka-client-component/src/main/resources/application-eureka.properties
@@ -19,7 +19,7 @@ eureka.instance.healthCheckUrl=${eureka.instance.url}/health
 eureka.instance.homePageUrl=${eureka.instance.url}/
 #eureka.instance.instanceId=${server.hostname}:${spring.application.name}:${server.port}
 
-eureka.client.serviceUrl.defaultZone=${eureka.server.protocol:${eureka.instance.protocol}}://${eureka.server.user:eureka}:${eureka.server.password:eurekasecret}@${eureka.server.hostname:${eureka.instance.hostname}}:${eureka.server.port:8761}/eureka/
+eureka.client.serviceUrl.defaultZone=${registry.server.protocol:${eureka.instance.protocol}}://${registry.server.user:eureka}:${registry.server.password:eurekasecret}@${registry.server.hostname:${eureka.instance.hostname}}:${registry.server.port:8761}/eureka/
 eureka.client.healthcheck.enabled=true
 
 ribbon.IsSecure=${eureka.instance.securePortEnabled}
