configuration refactoring to be able to see them in configprops

--- a/eureka-client-component/src/main/resources/application-eureka.properties
+++ b/eureka-client-component/src/main/resources/application-eureka.properties
@@ -1,3 +1,10 @@
+# Eureka default values
+registry.server.protocol=${eureka.instance.protocol}
+registry.server.hostname=${eureka.instance.hostname}
+registry.server.port=8761
+registry.server.user=eureka
+registry.server.password=eurekasecret
+
 # all interval properties below may require to be adjusted for performance
 eureka.client.registry-fetch-interval-seconds=10
 eureka.client.eureka-service-url-poll-interval-seconds=5
