--- a/eureka-client-component/pom.xml
+++ b/eureka-client-component/pom.xml
@@ -17,6 +17,12 @@
     </description>
 
     <dependencies>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>commons</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        
         <!--Spring Cloud-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
