--- a/security-sso-component/pom.xml
+++ b/security-sso-component/pom.xml
@@ -15,6 +15,12 @@
     <description>Security client component for oauth2 authentication/authorisation</description>
 
     <dependencies>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>commons</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
         <!--Spring Boot-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
