migrate to spring 2.1.3

--- a/client-service-light/src/main/resources/application.properties
+++ b/client-service-light/src/main/resources/application.properties
@@ -10,3 +10,7 @@ info.swaggerUrl=${server.protocol}://${server.hostname}:${server.port}/swagger-u
 
 spring.profiles.include=security, eureka, ssl, sslTrustStore, swagger
 
+zuul.sensitive-headers=Cookie,Set-Cookie
+zuul.routes.oauth.path=/oauth/**
+zuul.routes.oauth.url=http://localhost:8081/oauth  
+
