--- a/client-service/src/main/resources/application.properties
+++ b/client-service/src/main/resources/application.properties
@@ -6,4 +6,10 @@ security.basic.enabled=false
 
 swagger.proxy=true
 
-spring.profiles.include=eureka, security, ssl, sslTrustStore, swagger
+info.swaggerUrl=${server.protocol}://${server.hostname}:${server.port}/swagger-ui.html
+
+spring.profiles.include=security, eureka, ssl, sslTrustStore, swagger
+
+zuul.sensitive-headers=Cookie,Set-Cookie
+zuul.routes.oauth.path=/oauth/**
+zuul.routes.oauth.url=http://localhost:8081/oauth  
