--- a/ssl-component/pom.xml
+++ b/ssl-component/pom.xml
@@ -56,6 +56,7 @@
                                 <phase>compile</phase>
                                 <configuration>
                                     <scripts>
+                                        <!--suppress UnresolvedMavenProperty -->
                                         <script>
                                             <![CDATA[
                                                 def execute (String s){
