--- a/ssl-component/src/main/resources/application-sslTrustStore.properties
+++ b/ssl-component/src/main/resources/application-sslTrustStore.properties
@@ -1,7 +1,7 @@
 security.service.protocol=https
 truststore.enabled=true
 
-system.property.server.ssl.trust-store-password=jkspass
-system.property.server.ssl.trust-store-type=jks
+ssl.truststore.password=jkspass
+ssl.truststore.type=jks
 
 spring.profiles.include=common
