--- a/dependency-parent/pom.xml
+++ b/dependency-parent/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>1.5.10.RELEASE</version>
+        <version>2.1.3.RELEASE</version>
     </parent>
 
     <groupId>ro.rasel</groupId>
@@ -19,10 +19,12 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring-cloud.version>1.4.3.RELEASE</spring-cloud.version>
+        <spring-cloud-netflix.version>2.1.1.RELEASE</spring-cloud-netflix.version>
         <spring-cloud-security.version>1.2.2.RELEASE</spring-cloud-security.version>
-        <spring-security-oauth2.version>2.2.3.RELEASE</spring-security-oauth2.version>
-        <swagger.version>2.8.0</swagger.version>
+        <spring-security-oauth2.version>2.3.5.RELEASE</spring-security-oauth2.version>
+        <swagger.version>2.9.2</swagger.version>
+        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
+
     </properties>
 
     <dependencyManagement>
@@ -30,51 +32,22 @@
             <!--Spring Cloud-->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-eureka</artifactId>
-                <version>${spring-cloud.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-feign</artifactId>
-                <version>${spring-cloud.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-zuul</artifactId>
-                <version>${spring-cloud.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-eureka-server</artifactId>
-                <version>${spring-cloud.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>javax.servlet</groupId>
-                        <artifactId>servlet-api</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-hystrix</artifactId>
-                <version>${spring-cloud.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
-                <version>${spring-cloud.version}</version>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Greenwich.SR1</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <!--Spring Security-->
             <dependency>
+                <groupId>org.springframework.security.oauth.boot</groupId>
+                <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.security.oauth</groupId>
                 <artifactId>spring-security-oauth2</artifactId>
                 <version>${spring-security-oauth2.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-security</artifactId>
-                <version>${spring-cloud-security.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
@@ -159,7 +132,7 @@
         <snapshotRepository>
             <id>project.local</id>
             <name>project</name>
-            <url>file:${project.basedir}/../.repo/snasphot</url>
+            <url>file:${project.basedir}/../.repo/snapshot</url>
         </snapshotRepository>
         <repository>
             <id>project.local</id>
