--- a/ssl-component/src/main/resources/application-ssl.properties
+++ b/ssl-component/src/main/resources/application-ssl.properties
@@ -1,10 +1,11 @@
 server.protocol=https
 
 ssl.enabled=true
-ssl.hostname=computername
-server.ssl.key-alias=jks${ssl.hostname}alias
+ssl.certificate.name=computername
+server.ssl.enabled=${ssl.enabled}
+server.ssl.key-alias=jks${ssl.certificate.name}alias
 server.ssl.key-store-password=jkspass
-server.ssl.key-store=classpath:${ssl.hostname}.jks
+server.ssl.key-store=classpath:${ssl.certificate.name}.jks
 server.ssl.key-store-provider=SUN
 server.ssl.key-store-type=JKS
 server.ssl.protocol=TLSv1.2
