code and property cleanup, actuator, hystrix, fix context-path issue on security sso

--- a/client-service/pom.xml
+++ b/client-service/pom.xml
@@ -43,6 +43,12 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
+        <!--Spring Boot-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!--Spring Cloud-->
         <!--Server is used to be able to render eureka UI-->
         <dependency>
