--- a/client-service/src/main/resources/application.properties
+++ b/client-service/src/main/resources/application.properties
@@ -2,14 +2,11 @@ server.hostname=${COMPUTERNAME}
 server.port=9023
 spring.application.name=client-service
 
-security.basic.enabled=false
-
 swagger.proxy=true
-
 info.swaggerUrl=${server.protocol}://${server.hostname}:${server.port}/swagger-ui.html
 
-spring.profiles.include=security, eureka, ssl, sslTrustStore, swagger
-
 zuul.sensitive-headers=Cookie,Set-Cookie
-zuul.routes.oauth.path=/oauth/**
-zuul.routes.oauth.url=http://localhost:8081/oauth  
+
+management.endpoints.web.exposure.include=*
+
+spring.profiles.include=security, eureka, ssl, sslTrustStore, swagger
