--- a/contact-service/src/main/resources/application.properties
+++ b/contact-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.hostname=${COMPUTERNAME}
 server.port=8083
 spring.application.name=contact-service
 
-security.basic.enabled=false
+management.endpoints.web.exposure.include=*
 
 spring.jpa.generate-ddl=true
 
