--- a/eureka-client-component/src/main/resources/application-eureka.properties
+++ b/eureka-client-component/src/main/resources/application-eureka.properties
@@ -18,7 +18,7 @@ eureka.instance.port=${server.port:8761}
 
 eureka.instance.url=${eureka.instance.protocol}://${eureka.instance.hostname}:${eureka.instance.port}
 
-eureka.instance.securePortEnabled=${ssl.enabled:false}
+eureka.instance.securePortEnabled=${server.ssl.enabled:false}
 eureka.instance.securePort=${eureka.instance.port:8761}
 eureka.instance.secureVirtualHostName=${spring.application.name}
 eureka.instance.statusPageUrl=${eureka.instance.url}/info
