--- a/security-sso-component/src/main/resources/application-security.properties
+++ b/security-sso-component/src/main/resources/application-security.properties
@@ -5,12 +5,11 @@ security.server.port=9999
 security.server.user=acme
 security.server.password=acmesecret
 
-
 zuul.routes.user.path=/user/**
 zuul.routes.user.url=${security.server.url}/user
 
 # Security
-security.server.url=${security.server.protocol}://${security.server.hostname}:${security.server.port}
+security.server.url=${security.server.protocol}://${security.server.hostname}:${security.server.port}/sso
 security.enabled=true
 security.server.jwtSigningKey=123
 security.oauth2.client.accessTokenUri=${security.server.url}/oauth/token
@@ -18,8 +17,6 @@ security.oauth2.client.userAuthorizationUri=${security.server.url}/oauth/authori
 security.oauth2.client.clientId=${security.server.user}
 security.oauth2.client.clientSecret=${security.server.password}
 security.oauth2.resource.userInfoUri=${security.server.url}/user
-security.oauth2.resource.filterOrder=2
-security.basic.enabled=false
 
 # Hystrix strategy is required to avoid errors caused by the fact that it handles requests in a different thread causing unexpected errors over feign
 hystrix.command.default.execution.isolation.strategy=SEMAPHORE
