--- a/ssl-component/src/main/resources/application-ssl.properties
+++ b/ssl-component/src/main/resources/application-ssl.properties
@@ -1,8 +1,7 @@
 server.protocol=https
 
-ssl.enabled=true
 ssl.certificate.name=computername
-server.ssl.enabled=${ssl.enabled}
+server.ssl.enabled=${ssl.enabled:true}
 server.ssl.key-alias=jks${ssl.certificate.name}alias
 server.ssl.key-store-password=jkspass
 server.ssl.key-store=classpath:${ssl.certificate.name}.jks
