--- a/bookmark-service/src/main/resources/application.properties
+++ b/bookmark-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.hostname=${COMPUTERNAME}
 server.port=8082
 spring.application.name=bookmark-service
 
-security.basic.enabled=false
+management.endpoints.web.exposure.include=*
 
 spring.jpa.generate-ddl=true
 
