--- a/dependency-parent/pom.xml
+++ b/dependency-parent/pom.xml
@@ -19,12 +19,20 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring-cloud-netflix.version>2.1.1.RELEASE</spring-cloud-netflix.version>
-        <spring-cloud-security.version>1.2.2.RELEASE</spring-cloud-security.version>
-        <spring-security-oauth2.version>2.3.5.RELEASE</spring-security-oauth2.version>
-        <swagger.version>2.9.2</swagger.version>
-        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
 
+        <spring-cloud-dependencies.version>Greenwich.SR1</spring-cloud-dependencies.version>
+
+        <spring-security-oauth2-autoconfigure.version>2.1.3.RELEASE</spring-security-oauth2-autoconfigure.version>
+        <spring-security-oauth2.version>2.3.5.RELEASE</spring-security-oauth2.version>
+        <spring-security-jwt.version>1.0.9.RELEASE</spring-security-jwt.version>
+
+        <swagger.version>2.9.2</swagger.version>
+
+        <jaxb-api.version>2.3.0</jaxb-api.version>
+        <jaxb-runtime.version>2.3.0</jaxb-runtime.version>
+        <activation.version>1.1.1</activation.version>
+
+        <commons-io.version>2.6</commons-io.version>
     </properties>
 
     <dependencyManagement>
@@ -33,7 +41,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Greenwich.SR1</version>
+                <version>${spring-cloud-dependencies.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -42,7 +50,7 @@
             <dependency>
                 <groupId>org.springframework.security.oauth.boot</groupId>
                 <artifactId>spring-security-oauth2-autoconfigure</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>${spring-security-oauth2-autoconfigure.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security.oauth</groupId>
@@ -52,7 +60,7 @@
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-jwt</artifactId>
-                <version>1.0.9.RELEASE</version>
+                <version>${spring-security-jwt.version}</version>
             </dependency>
 
             <!--Swagger-->
@@ -67,11 +75,28 @@
                 <version>${swagger.version}</version>
             </dependency>
 
+            <!--jaxb-->
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${jaxb-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>${jaxb-runtime.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.activation</groupId>
+                <artifactId>activation</artifactId>
+                <version>${activation.version}</version>
+            </dependency>
+
             <!--Apache Commons-->
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.6</version>
+                <version>${commons-io.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
