--- a/hystrix-dashboard-service/pom.xml
+++ b/hystrix-dashboard-service/pom.xml
@@ -17,6 +17,16 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>security-sso-component</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>ro.rasel</groupId>
+            <artifactId>ssl-component</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
         <!--Spring Cloud-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
