--- a/passport-service/src/main/resources/application.properties
+++ b/passport-service/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.hostname=${COMPUTERNAME}
 server.port=8084
 spring.application.name=passport-service
 
-security.basic.enabled=false
+management.endpoints.web.exposure.include=*
 
 spring.profiles.include=eureka, security, ssl, sslTrustStore, swagger
