--- a/security-sso-auth-server/src/main/resources/application.properties
+++ b/security-sso-auth-server/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 server.port=9999
+server.hostname=${COMPUTERNAME}
+
+# The context path has to be explicit if you are running both the client and the auth server on localhost, otherwise the cookie paths clash and the apps cannot agree on a session identifier.
+# Read more on https://spring.io/guides/tutorials/spring-boot-oauth2/#_social_login_authserver
+server.servlet.context-path=/sso
+
+management.endpoints.web.exposure.include=*
 
 spring.datasource.url=jdbc:hsqldb:file:./security-sso-auth-server/target/db/testdb
 spring.datasource.username=dbuser
