--- a/starter-parent/pom.xml
+++ b/starter-parent/pom.xml
@@ -51,6 +51,33 @@
                         </dependency>
                     </dependencies>
                 </plugin>
+                <plugin>
+                    <groupId>com.github.kongchen</groupId>
+                    <artifactId>swagger-maven-plugin</artifactId>
+                    <version>3.1.6</version>
+                    <executions>
+                        <execution>
+                            <phase>compile</phase>
+                            <goals>
+                                <goal>generate</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <apiSources>
+                            <apiSource>
+                                <springmvc>true</springmvc>
+                                <swaggerDirectory>${project.basedir}/generated/swagger</swaggerDirectory>
+                                <swaggerFileName>${project.artifactId}-swagger</swaggerFileName>
+                                <info>
+                                    <title>${project.name}</title>
+                                    <version>${project.version}</version>
+                                    <description>${project.description}</description>
+                                </info>
+                            </apiSource>
+                        </apiSources>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
 
