--- a/client-service-light/src/main/resources/application.properties
+++ b/client-service-light/src/main/resources/application.properties
@@ -8,3 +8,5 @@ info.swaggerUrl=${server.protocol}://${server.hostname}:${server.port}/swagger-u
 zuul.sensitive-headers=Cookie,Set-Cookie
 
 management.endpoints.web.exposure.include=*
+
+server.ssl.client-auth=none
