--- a/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/src/main/resources/application.properties
@@ -8,3 +8,5 @@ eureka.password=eurekasecret
 eureka.client.fetchRegistry=false
 eureka.server.enable-self-preservation=false
 eureka.server.responseCacheAutoExpirationInSeconds=10
+
+server.ssl.client-auth=none
