--- a/security-sso-auth-server/src/main/resources/application.properties
+++ b/security-sso-auth-server/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.url=jdbc:hsqldb:file:./security-sso-auth-server/target/db/test
 spring.datasource.username=dbuser
 spring.datasource.password=dbpass
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+
+server.ssl.client-auth=none
