set service name to gateway-service

--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.hostname=${COMPUTERNAME}
 server.port=9024
-spring.application.name=client-service-light
+spring.application.name=gateway-service
 
 swagger.proxy=true
 info.swaggerUrl=${server.protocol}://${server.hostname}:${server.port}/swagger-ui.html
