enable client request retry to check multiple servers if one down

--- a/eureka-client-component/src/main/resources/application-eureka.properties
+++ b/eureka-client-component/src/main/resources/application-eureka.properties
@@ -29,8 +29,17 @@ eureka.instance.homePageUrl=${eureka.instance.url}/
 eureka.client.serviceUrl.defaultZone=${registry.server.protocol:${eureka.instance.protocol}}://${registry.server.user:eureka}:${registry.server.password:eurekasecret}@${registry.server.hostname:${eureka.instance.hostname}}:${registry.server.port:8761}/eureka/
 eureka.client.healthcheck.enabled=true
 
+zuul.host.connect-timeout-millis=${request.timeout:86400000}
+zuul.host.socket-timeout-millis=${request.timeout:86400000}
+
+hystrix.command.default.execution.timeout.enabled=false
+
 ribbon.IsSecure=${eureka.instance.securePortEnabled}
-#ribbon.ConnectTimeout=999999999
+ribbon.ConnectTimeout=${request.timeout:86400000}
 ribbon.ReadTimeout=${request.timeout:86400000}
-#zuul.host.connect-timeout-millis=999999999
-#zuul.host.socket-timeout-millis=999999999
+
+ribbon.MaxAutoRetries=1
+ribbon.MaxAutoRetriesNextServer=3
+ribbon.retryableStatusCodes=500,502
+ribbon.retryEnabled=true
+ribbon.OkToRetryOnAllOperations=true
