use feign client with generated api and models from dependent services

--- a/contact-service/pom.xml
+++ b/contact-service/pom.xml
@@ -42,7 +42,7 @@
         </dependency>
         <dependency>
             <groupId>ro.rasel</groupId>
-            <artifactId>domain-interfaces</artifactId>
+            <artifactId>spring-commons</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
