--- a/client-service/pom.xml
+++ b/client-service/pom.xml
@@ -38,11 +38,6 @@
             <artifactId>swagger-component</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>ro.rasel</groupId>
-            <artifactId>domain-interfaces</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
 
         <!--Spring Boot-->
         <dependency>
@@ -85,6 +80,44 @@
                             <schemes>https</schemes>
                         </apiSource>
                     </apiSources>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-codegen-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>bookmark-api-generate</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${project.basedir}/swagger/bookmark-service-swagger.json</inputSpec>
+                            <apiPackage>ro.rasel.bookmark.api</apiPackage>
+                            <modelPackage>ro.rasel.bookmark.domain</modelPackage>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>contact-api-generate</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${project.basedir}/swagger/contact-service-swagger.json</inputSpec>
+                            <apiPackage>ro.rasel.contact.api</apiPackage>
+                            <modelPackage>ro.rasel.contact.domain</modelPackage>
+                        </configuration>
+                    </execution>
+                </executions>
+                <configuration>
+                    <language>spring</language>
+                    <library>spring-cloud</library>
+                    <inputSpec>${project.basedir}/swagger/bookmark-service-swagger.json</inputSpec>
+                    <configurationFile>${project.basedir}/swagger/swaggerConfig.json</configurationFile>
+                    <generateSupportingFiles>false</generateSupportingFiles>
+                    <configOptions>
+                        <interfaceOnly>true</interfaceOnly>
+                    </configOptions>
                 </configuration>
             </plugin>
         </plugins>
