--- a/starter-parent/pom.xml
+++ b/starter-parent/pom.xml
@@ -78,6 +78,11 @@
                         </apiSources>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>io.swagger</groupId>
+                    <artifactId>swagger-codegen-maven-plugin</artifactId>
+                    <version>2.4.5</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
